Correct issue presented w/i home reviews aticle alignment brought on by fixing tablet/ mobile landscape article alignment

--- a/css/main.css
+++ b/css/main.css
@@ -828,6 +828,11 @@ input[type=button] {
     padding-bottom: 50px;
   }
 
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .reviews article div {
     width: 42%;
   }
